# osiris

./: .dockerignore  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Cargo.toml.in  LICENSE-MIT  Makefile  README.md  boot.sh  bootstrap.c  build.rs  config.toml  faq.md  flake.nix  justfile  main.c  options.toml  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  pre-commit.sh
.github/workflows/: ci.yml  formatting.yml
boards/: nucleo_l4r5zi.dts  options.toml
cmake/: arm-none-eabi.cmake  epilogue.cmake  prologue.cmake
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world/src/: main.rs
hal/: CMakeLists.txt
include/kernel/: lib.h
include/minimal/: mem.h
include/nlib/: core.h
interface/: Cargo.toml  build.rs
interface/include/: bindings.h
interface/src/: lib.rs
kernel/: CMakeLists.txt  Cargo.toml  Cargo.toml.in  README.md  build.rs
kernel/include/kernel/: lib.h
kernel/macros/: Cargo.toml
kernel/macros/src/: lib.rs
kernel/src/: cmdline.rs  faults.rs  init.rs  lib.rs  macros.rs  main.rs  mem.rs  modules.rs  print.rs  sched.rs  services.rs  sync.rs  syscalls.rs  time.rs  uspace.rs  utils.rs
kernel/src/mem/: alloc.rs  array.rs  boxed.rs  pool.rs  queue.rs
kernel/src/modules/: kernelmods.rs
kernel/src/modules/kernelmods/: sample_module.rs
kernel/src/sched/: scheduler.rs  task.rs  thread.rs
kernel/src/sync/: atomic.rs  once.rs  spinlock.rs
kernel/src/syscalls/: dummy.rs  file.rs  tasks.rs
kernel/src/uspace/: core.rs  util.rs
machine/: README.md  options.toml
machine/api/: Cargo.toml
machine/arm/: .gitattributes  CMakeLists.txt  Cargo.toml  README.md  build.rs  options.toml
machine/arm/cmake/: toolchain.cmake
machine/arm/common/: CMakeLists.txt  crt0.S  entry.c  irq.S  ivt.S  mem.c  syscall.c
machine/arm/cortex-m4/: crt0.S  entry.c
machine/arm/src/: asm.rs  crit.rs  debug.rs  excep.rs  lib.rs  panic.rs  print.rs  sched.rs
machine/arm/st/stm32l4/: CMakeLists.txt  link.ld
machine/arm/st/stm32l4/device/: CMakeLists.txt
machine/arm/st/stm32l4/hal/: CMakeLists.txt
machine/arm/st/stm32l4/interface/: CMakeLists.txt  export.h  sched.c
machine/arm/stm32-nucleo-l4r5zi/: link.ld
machine/arm/stm32l4xx/: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  link.ld  options.toml
machine/arm/stm32l4xx/board/: nucleo.h
machine/arm/stm32l4xx/config/: config.ldconf  stm32l4r5xx.ldconf
machine/arm/stm32l4xx/device/: CMakeLists.txt
machine/arm/stm32l4xx/hal/: CMakeLists.txt
machine/arm/stm32l4xx/interface/: CMakeLists.txt  clock.c  export.h  instru.c  lib.c  lib.h  sched.c  uart.c
machine/arm/stm32l4xx/macros/: CMakeLists.txt  README.md  lib.c  lib.h
machine/arm/stm32l4xx/nucleo/: CMakeLists.txt  README.md  instru.c  lib.c  lib.h  sched.c  uart.c
machine/arm/stm32l4xx/r5zi/: CMakeLists.txt  lib.c
machine/arm/stm32l4xx/src/: asm.rs  lib.rs  rcc.rs  sched.rs  uart.rs
machine/builder/: Cargo.toml
machine/cortex-m/: Cargo.toml  build.rs
machine/cortex-m/common/: crt0.S  irq.S  ivt.S
machine/cortex-m/src/: excep.rs  lib.rs  native.rs  sched.rs  stub.rs
machine/cortex-m/src/native/: asm.rs  crit.rs  debug.rs  excep.rs  panic.rs  print.rs  sched.rs
machine/cortex-m/src/stub/: asm.rs  sched.rs
machine/cortex-m/st/stm32l4/: CMakeLists.txt  README.md
machine/cortex-m/st/stm32l4/interface/: clock.c  export.h  lib.c  lib.h
machine/cortex-m4/: CMakeLists.txt  crt0.S  entry.c  irq.S  reloc.S  syscall.c  syscall.map.generated.h
machine/select/: Cargo.toml  build.rs
machine/select/src/: arm.rs  asm.rs  lib.rs  testing.rs
machine/testing/: Cargo.toml  options.toml
macros/: Cargo.toml
macros/src/: lib.rs  logging.rs  syscall.rs  tree.rs
nlib/: CMakeLists.txt  Makefile  core.c  core.h
nlib/src/: core.c
presets/: stm32l4r5zi_def.toml  test_def.toml  testing_def.toml
scripts/syms/: CMakeLists.txt  inject_syms.py
src/: dispatch.rs  error.rs  faults.rs  idle.rs  irq.rs  lib.rs  macros.rs  main.rs  mem.rs  modules.rs  print.rs  sched.rs  services.rs  syscalls.rs  task.rs  time.rs  types.rs  uapi.rs  uspace.rs  utils.rs
src/dispatch/: task.rs
src/mem/: alloc.rs  array.rs  boxed.rs  heap.rs  pfa.rs  pool.rs  queue.rs  rbtree.rs  view.rs  vmm.rs
src/modules/: sample_module.rs
src/sched/: dispch.rs  mod.rs  rr.rs  rt.rs  scheduler.rs  task.rs  thread.rs
src/services/: init.rs
src/sync/: atomic.rs  once.rs  spinlock.rs
src/syscalls/: dummy.rs  file.rs  mod.rs  sched.rs  tasks.rs
src/types/: array.rs  bitset.rs  boxed.rs  heap.rs  list.rs  pool.rs  queue.rs  rbtree.rs  traits.rs  view.rs
src/uapi/: print.rs  sched.rs  time.rs
src/uspace/: core.rs  util.rs
tools/bundler/: Cargo.toml
tools/config/: Cargo.toml
tools/config/.cargo/: config.toml
tools/config/examples/: demo.rs
tools/config/examples/.cargo/: config.toml
tools/config/examples/assets/: demo_options.toml  options.toml
tools/config/examples/assets/sub/: options.toml
tools/config/src/: category.rs  error.rs  file.rs  lib.rs  logging.rs  main.rs  option.rs  parse.rs  resolve.rs  state.rs  toml_patch.rs  types.rs  ui.rs
tools/config/src/ui/: base.rs  confirm.rs  editor.rs  help.rs  types.rs  widget.rs
tools/config/src/ui/widget/: button.rs  dropdown.rs
tools/injector/: inject_syms.py
website/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
xtasks/: Cargo.toml
xtasks/.cargo/: config.toml
xtasks/config/: Cargo.toml
xtasks/config/examples/: demo.rs
xtasks/config/examples/assets/: demo_options.toml
xtasks/config/src/: error.rs  lib.rs  macros.rs  main.rs  option.rs  parse.rs  resolve.rs  state.rs  types.rs
xtasks/config/src/ui/: base.rs  confirm.rs
xtasks/config/src/ui/widget/: button.rs
xtasks/crates/dtgen/: Cargo.toml  README.md
xtasks/crates/dtgen/src/: codegen.rs  ir.rs  ldgen.rs  lib.rs  main.rs  parser.rs
xtasks/crates/pack/: Cargo.toml
xtasks/crates/pack/src/: bootinfo.rs  elf.rs  image.rs  main.rs  pack.rs
xtasks/injector/: Cargo.toml
xtasks/logging/: Cargo.toml
(+55 files in other folders)
