[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello-world"
path = "src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
osiris = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"

[profile.dev]
panic = "abort"
strip = false
opt-level = 2

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
