[package]
name = "hal-arm"
version = "0.1.0"
authors = ["Thomas Wachter"]
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
hal-api = { path = "../api" }
critical-section = { version = "1.2", features = ["restore-state-usize"] }

[build-dependencies]
cbindgen = "0.28.0"
bindgen = "0.72.0"
cmake = "0.1.54"
anyhow = "1.0.99"
serde_json = "1.0.145"

[features]
# This enables the host implementation of the HAL. Mainly used for testing.
host = []
panic-exit = []
panic-uart = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(cm4)']}
