[package]
name = "dtgen"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtgen"
path = "src/lib.rs"

[[bin]]
name = "dtgen"
path = "src/main.rs"

[dependencies]
fdt = "0.1.5"
clap = { version = "4", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
