[package]
name = "dtgen"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtgen"
path = "src/lib.rs"

[[bin]]
name = "dtgen"
path = "src/main.rs"

[target.'cfg(not(target_os = "none"))'.dependencies]
fdt = "0.1.5"
logging = { workspace = true }
log = "0.4.27"
clap = { version = "4", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
indoc = "2.0.7"