[package]
name = "pack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
logging = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
crc-fast = "1.8.0"
elf = "0.8.0"
log = "0.4.27"
interface = { workspace = true }
bytemuck = { version = "1.24.0", features = ["derive"] }
tempfile = "3.23.0"
cargo_metadata = "0.23.1"
toml = "0.9.11"
